# nxtpoll

./: .gitignore  README.md  flake.nix  plan.md  samconfig.toml  template.yaml  y
api/: Cargo.toml
api/src/hello_world/: hello_world.rs
api/src/models/: poll.rs
api/src/polls/: add_question.rs  create_poll.rs  poll_form.rs  save_question.rs
api/src/utils/: add_poll.rs  get_poll.rs  html_response.rs  mod.rs  save_question.rs
api/templates/: add-question.html  create-poll.html  helloworld.html  poll_form.html  saved-questions-list.html
frontend/: app.js  index.html  package-lock.json  package.json  style.css  tailwind.config.js
