[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "poll_form_lambda"
path = "src/polls/poll_form.rs"

[[bin]]
name = "create_poll_lambda"
path = "src/polls/create_poll.rs"

[[bin]]
name = "save_question_lambda"
path = "src/polls/save_question.rs"

[dependencies]
askama = "0.12.1"
aws-config = { version = "0.101.0", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "0.38.0"
lambda_http = "0.8.3"
lambda_runtime = "0.8.3"
log = "0.4.20"
serde = "1.0.193"
simple_logger = "4.2.0"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
uuid = { version = "1.6.1", features = ["v4"] }

